2022-09-30 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_private.h: Implement new data structures
	specific to riscv.
	* lib/jit_disasm.c: Extra disassemble code for riscv constant pool.
	* lib/jit_riscv-cpu.c: Modify movi to use constant pool if 3 or
	more instructions are required to construct constant and modify
	movi_p to use a pc relative load from a constant pool.
	lib/jit_riscv-sz.c: Update for new constant pool code. Most
	instructions that need 64 bit constants are significantly reduced.
	* lib/jit_riscv.c: Implement most of the constant pool code.
	* lib/jit_size.c: Update for estimate of code generation size.
	* lib/lightning.c: Update for riscv specific code, and also make
	sure to mprotect the constant pool as executable.

2022-09-08 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_fallback.c: Implement fallback compare and swap with
	pthreads.
	* check/Makefile.am: Update for new cas{r,i} simple test.
	* check/catomic.c, check/catomic.ok: New test case for
	simple compare and swap atomic operation.
	* check/lightning.c: Add entries to be able to use
	the new compare and swap atomic operation. Still missing
	a general test, only the basic C version.
	* include/lightning.h.in: Include pthread.h, even if not
	needing a fallback compare and swap.
	* include/lightning/jit_private.h: Add support for a register pair
	in second argument. Required by the new casr and casi operations.
	* lib/jit_aarch64-cpu.c, lib/jit_aarch64-sz.c, lib/jit_aarch64.c,
	lib/jit_ppc-cpu.c, lib/jit_ppc-sz.c, lib/jit_ppc.c, lib/jit_x86-cpu.c,
	lib/jit_x86-sz.c, lib/jit_x86.c: Implement inline code for compare
	and swap.
	* lib/jit_arm-cpu.c, lib/jit_arm-sz.c, lib/jit_arm.c: Implement
	inline code for compare and swap if cpu is armv7, otherwise, use
	a fallback with pthreads.
	* lib/jit_alpha-cpu.c, lib/jit_alpha-sz.c, lib/jit_alpha.c,
	lib/jit_hppa-cpu.c, lib/jit_hppa-sz.c, lib/jit_hppa.c,
	lib/jit_ia64-cpu.c, lib/jit_ia64-sz.c, lib/jit_ia64.c,